# agentlens

./: .gitignore  README.md  docker-compose.yml
backend/: db.py  main.py  models.py  requirements.txt
backend/connectors/: langchain_connector.py  openai_connector.py  webhook.py
backend/pipeline/: drift.py  fingerprint.py  normaliser.py
backend/simulation/: runner.py  scenarios.py  twin.py
frontend/: Dockerfile  next.config.js  nixpacks.toml  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/[id]/: page.tsx
frontend/app/agents/[id]/fingerprint/: page.tsx
frontend/app/governance/: page.tsx
frontend/app/simulations/[id]/: page.tsx
frontend/app/simulations/new/: page.tsx
frontend/components/: AgentCard.tsx  AttestationBadge.tsx  DecisionDonut.tsx  DivergenceChart.tsx  DriftSparkline.tsx  FingerprintGraph.tsx  LiveFeed.tsx  OutcomeChart.tsx  SimulationGraph.tsx  TemporalHeatmap.tsx  TraceGraph.tsx
frontend/lib/: api.ts  hooks.ts
sdk/: README.md  pyproject.toml
sdk/agentlens/: __init__.py  client.py
sdk/agentlens/integrations/: __init__.py  http.py  langchain.py  openai.py
