[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlens"
version = "0.1.0"
description = "AgentLens SDK — observe, trace, and analyze your AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "observability", "agents", "llm", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
# Zero required dependencies — optional extras for integrations
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
langchain = ["langchain-core>=0.1.0"]
fastapi = ["starlette>=0.27.0"]
all = ["openai>=1.0.0", "langchain-core>=0.1.0", "starlette>=0.27.0"]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.urls]
Homepage = "https://github.com/jawaddxb/agentlens"
Documentation = "https://github.com/jawaddxb/agentlens/tree/main/sdk"
Repository = "https://github.com/jawaddxb/agentlens"
Issues = "https://github.com/jawaddxb/agentlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentlens"]

[tool.hatch.build.targets.sdist]
include = ["agentlens/**", "README.md", "pyproject.toml"]
